--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
-                        lipsmacking creations will tickle your culinary senses!</p>
+                        lipsmacking
+                        creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a role="button" href="#reserve" class="btn btn-warning btn-sm btn-block">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -73,14 +77,23 @@
 
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
+            <div class="col-12 col-sm-4 col-md-3 oder-sm-fist">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing
-                    appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All
-                    for just $19.99 per person </p>
+            <div class="col col-sm col-md order-sm-last">
+                <div class="media">
+
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                            different salads, six enticing
+                            appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft
+                            drinks. All
+                            for just $19.99 per person</p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center ml-3" src="img/buffet.png" alt="Buffet">
+                </div>
+
             </div>
         </div>
 
@@ -99,6 +112,82 @@
                             whos-who in the culinary world, he specializes in
                             creating mouthwatering Indo-Italian fusion experiences.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form id="reserve">
+                            <dl class="row">
+                                <dt class="col-md-2 col-form-label">Number of Guests</dt>
+                                <dd class="col-10">
+
+                                    <div class="form-check form-check-inline">
+
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                            value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+
+                                    <div class="form-check form-check-inline">
+
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                            value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                            value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                            value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                            value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                            value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">6</label>
+                                    </div>
+
+                                </dd>
+
+
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-md-2 col-form-label">Date and Time</dt>
+                                <dd class="col-sm-10">
+                                    <div class="col-sm-4 form-check-inline">
+                                        <input type="tel" class="form-control" id="areacode" name="areacode"
+                                            placeholder="Date">
+                                    </div>
+                                    <div class="col-sm-4  form-check-inline">
+                                        <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Time">
+                                    </div>
+                                </dd>
+                            </dl>
+                            <dl class="row">
+                                <dt class="col-md-2 col-form-label"></dt>
+                                <dd class="col-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </dd>
+                            </dl>
+                        </form>
                     </div>
                 </div>
             </div>
