--- a/index.html
+++ b/index.html
@@ -80,6 +80,103 @@
         </div>
     </div>
 
+    <div id="tableModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <dl class="row">
+                            <dt class="col-md-2 col-form-label">Number of Guests</dt>
+                            <dd class="col-10">
+
+                                <div class="form-check form-check-inline">
+
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                        value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">1</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                        value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                        value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                        value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                        value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                        value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">6</label>
+                                </div>
+
+                            </dd>
+
+
+                        </dl>
+
+                        <dl class="row">
+                            <dt class="col-md-2 col-form-label">Section</dt>
+                            <dd class="col-sm-10">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success btn-sm active">
+                                        <input type="radio" name="options" id="option1" autocomplete="off" checked>
+                                        Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger btn-sm">
+                                        <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                    </label>
+
+                                </div>
+                            </dd>
+                        </dl>
+                        <dl class="row">
+                            <dt class="col-md-2 col-form-label">Date and Time</dt>
+                            <dd class="col-sm-10">
+                                <div class="col-sm-4 form-check-inline">
+                                    <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Date">
+                                </div>
+                                <div class="col-sm-4  form-check-inline">
+                                    <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Time">
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <dl class="row">
+                            <dt class="col-md-2 col-form-label"></dt>
+                            <dd class="col-10">
+                                <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </dd>
+                        </dl>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -93,9 +190,13 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
+                    <!-- <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
                         title="Or Call us at  <br> <strong>+852 12345678 </strong>" data-placement="bottom" href="#reserveform">Reserve
+                        Table</a> -->
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-placement="bottom"
+                        data-target="#tableModal">Reserve
                         Table</a>
+
                 </div>
             </div>
         </div>
@@ -219,7 +320,7 @@
             </div>
         </div>
 
-        <div class="row row-content justify-content-center">
+        <!-- <div class="row row-content justify-content-center">
             <div class="col-12 col-sm-8">
                 <div class="card">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
@@ -293,7 +394,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <footer class="footer">
@@ -346,11 +447,11 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script>
+    <!-- <script>
         $(document).ready(function () {
             $('[data-toggle="tooltip"]').tooltip();
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
