--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>
                             Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
+                                class="fa fa-info fa-lg"></span>
                             About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>
+                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
+                                class="fa fa-address-card fa-lg"></span>
                             Contact</a></li>
                 </ul>
                 <span class="navbar-text">
@@ -59,8 +62,8 @@
                             </div>
                             <div class="form-group col-sm-4">
                                 <label class="sr-only" for="exampleInputPassword3">Password</label>
-                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3"
-                                    placeholder="Password">
+                                <input type="password" class="form-control form-control-sm mr-1"
+                                    id="exampleInputPassword3" placeholder="Password">
                             </div>
                             <div class="col-sm-auto">
                                 <div class="form-check">
@@ -71,7 +74,8 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto"
+                                data-dismiss="modal">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                         </div>
                     </form>
@@ -96,39 +100,39 @@
 
                                 <div class="form-check form-check-inline">
 
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                                        value="option1">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio1" value="option1">
                                     <label class="form-check-label" for="inlineRadio1">1</label>
                                 </div>
 
                                 <div class="form-check form-check-inline">
 
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                                        value="option2">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2">2</label>
                                 </div>
                                 <div class="form-check form-check-inline">
 
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                                        value="option2">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2">3</label>
                                 </div>
                                 <div class="form-check form-check-inline">
 
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                                        value="option2">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2">4</label>
                                 </div>
                                 <div class="form-check form-check-inline">
 
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                                        value="option2">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2">5</label>
                                 </div>
                                 <div class="form-check form-check-inline">
 
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                                        value="option2">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
                                     <label class="form-check-label" for="inlineRadio2">6</label>
                                 </div>
 
@@ -156,7 +160,8 @@
                             <dt class="col-md-2 col-form-label">Date and Time</dt>
                             <dd class="col-sm-10">
                                 <div class="col-sm-4 form-check-inline">
-                                    <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Date">
+                                    <input type="tel" class="form-control" id="areacode" name="areacode"
+                                        placeholder="Date">
                                 </div>
                                 <div class="col-sm-4  form-check-inline">
                                     <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Time">
@@ -167,7 +172,8 @@
                         <dl class="row">
                             <dt class="col-md-2 col-form-label"></dt>
                             <dd class="col-10">
-                                <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-secondary ml-auto"
+                                    data-dismiss="modal">Cancel</button>
                                 <button type="submit" class="btn btn-primary">Reserve</button>
                             </dd>
                         </dl>
@@ -193,8 +199,8 @@
                     <!-- <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
                         title="Or Call us at  <br> <strong>+852 12345678 </strong>" data-placement="bottom" href="#reserveform">Reserve
                         Table</a> -->
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-placement="bottom"
-                        data-target="#tableModal">Reserve
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
+                        data-placement="bottom" data-target="#tableModal">Reserve
                         Table</a>
 
                 </div>
@@ -210,7 +216,8 @@
                         <div class="carousel-item active">
                             <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
+                                        class="badge badge-pill badge-default">$4.99</span></h2>
                                 <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                                     Italian pizza, topped with Cerignola olives, ripe vine
                                     cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -231,7 +238,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/alberto.png" alt="Buffet">
+                            <img class="d-block img-fluid" src="img/alberto.jpg" alt="Buffet">
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>Alberto Somayya
                                 </h2>
@@ -268,7 +275,8 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span
+                                class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -306,7 +314,8 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.jpg"
+                        alt="Alberto Somayya">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -423,12 +432,16 @@
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class=" text-center">
-                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i
+                                class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i
                                 class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
+                                class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
+                                class="fa fa-youtube"></i></a>
                         <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
